# pydot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: codspeed.yml
pydot-rs/: main.py  pure_python.py
pydot-rs/dot_python/: __init__.py  graph.py  parser.py  tokenizer.py
pydot-rs/dot_rust/: __init__.pyi
pydot-rs/dot_rust/src/: lib.rs  parser.rs  tokenizer.rs
pydot_rs/: __init__.py
pydot_rs/dot_python/: graph.py  parser.py  tokenizer.py
pydot_rs/dot_rust/: Cargo.toml  __init__.pyi
pydot_rs/dot_rust/src/: lib.rs  parser.rs  tokenizer.rs
samples/: graph.dot  random_graph_gen.py  undir.dot
src/: lib.rs  main.py
tests/: test_default_graph_parsing.py  test_graph_parsing.py
