[package]
name = "pydot-rs"
version = "0.0.0"
edition = "2021"

[lib]
name = "pydot_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
regex = "1.8.1"
pyo3 = { version = "0.18.0", features = [
    "abi3-py37",
    "anyhow",
    "auto-initialize",
] }


[features]
extension-module = ["pyo3/extension-module"]


[dev-dependencies]
insta = "1.29.0"
