[tool.poetry]
name = "pydot-rs"
version = "0.1.0"
description = ""
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.dev-dependencies]
black = "^23.3.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
