[tool.poetry]
name = "pydot-rs"
version = "0.1.0"
description = ""
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0"
rustimport = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "7.1.0"
pytest-codspeed = { git = "https://github.com/CodSpeedHQ/pytest-codspeed.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
